--- a/us/template/register.html
+++ b/us/template/register.html
@@ -94,6 +94,11 @@
                         <p id="lname" class="text-danger"></p>
                     </div>
                     <div class="form-group">
+                        <label for="{{ playerForm.phone.id_for_label }}">Phone</label>
+                        {{ playerForm.phone }}
+                        <p id="phone1" class="text-danger"></p>
+                    </div>
+                    <div class="form-group">
                         <label for="{{ playerForm.email.id_for_label }}">Email</label>
                         {{ playerForm.email }}
                         <p id="email" class="text-danger"></p>
