--- a/us/template/ScoutPlayer.html
+++ b/us/template/ScoutPlayer.html
@@ -149,8 +149,9 @@
                     </p>
                 </div>
                 
-                <div class="d-flex align-items-center justify-content-center col-5">
-                    <a href="{% url 'ScoutPlayerEdit' i.id %}"><button class="btn btn-outline-primary">Scout Report</button></a>
+                <div class="d-flex flex-column align-items-center justify-content-center col-5">
+                    <a class="w-100 d-flex text-decoration-none justify-content-center" href="{% url 'ScoutPlayerEdit' i.id %}"><button class="w-50 btn btn-outline-primary">Scout Report</button></a>
+                    <a class="w-100 d-flex text-decoration-none justify-content-center mt-2" href="{% url 'contact' i.id %}"><button class="btn btn-outline-primary w-50">View Player Contacts</button></a>
                 </div>
             </div>
             
