--- a/us/template/Contract.html
+++ b/us/template/Contract.html
@@ -245,7 +245,9 @@
         </div>
     </div>
 </body>
-
+<div>
+    
+</div>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
