--- a/us/template/enrolled.html
+++ b/us/template/enrolled.html
@@ -100,7 +100,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -109,6 +109,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ScoutPlayer' %}">Players</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
                 </div>
@@ -122,7 +126,7 @@
             </div>
         </div>
     </nav>
-    {% elif user.is_club %}
+    {% elif user.is_player %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
@@ -144,21 +148,27 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubScout' %}">Scouts</a>
+                                href="{% url 'PlayerScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubPlayer' %}">Players</a>
+                                href="{% url 'player-club' %}">Clubs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
+                        
+
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
+                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -188,22 +198,33 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'PlayerScout' %}">Scouts</a>
+                                href="{% url 'ClubScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'player-club' %}">Clubs</a>
+                                href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'following_feeds' %}">Feeds</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'tournaments' %}">Tournaments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page"
+                                href="{% url 'enrolled' %}">Enrolled</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
+                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}} </p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -212,57 +233,85 @@
         </div>
     </nav>
     {% endif %}
-    <div class="d-flex justify-content-center">
-        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
-            <p class="m-4 text-secondary fs-4 fw-bold">Tournament Info</p>
-            <form action="" method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                <div class="d-flex justify-content-center"><input type="file" required class="mt-4" name="img"
-                        value="Change image" accept="image/*"></div>
-                <div class="d-flex justify-content-center">
-                    <div class="col-lg-8 col-12">
+    <div class="d-flex flex-wrap justify-content-center mt-4">
 
-                        <div class="d-flex justify-content-center gap-2 m-5 flex-column">
-                            <label for="tourdate">Tournament Date:</label>
-                            <input type="datetime-local" class="form-control" required name="tourdate" id="tourdate">
+        <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
+            <div>
+                <p class="h4 text-secondary fw-bold">Enrolled Tournaments</p>
 
+            </div>
 
+            {% if feeds %}
+            {% for i in feeds %}
 
-                            <div class="d-flex flex-column w-100">
-                                <label for="dist">District</label>
-                                <select class="form-control" name="dist" id="">
-                                    {% for choice_value,choice in district_choices %}
-                                    <option value="{{ choice }}">{{ choice }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <input type="text" name="place" class="form-control" placeholder="Venue">
-
-
-                            <textarea class="form-control" required name="title" id="" cols="30" rows="2"
-                                placeholder="Title"></textarea>
-                            <textarea class="form-control" required name="desc" id="" cols="30" rows="5"
-                                placeholder="Description"></textarea>
-
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success">Submit</button>
-                        </div>
+            <div class="mt-4 border-top pt-4">
+                <div class="d-flex">
+                    <div class="feed-img">
+                        <img class="w-100 rounded-circle" src={{i.tour.user.img.url}} alt="">
+                    </div>
+                    <div class="ms-2 d-flex">
+                        <p class="fw-bold">
+                            {{i.tour.user.club_name}}
+                        </p>
+                        <p class="ms-2 text-secondary">{{i.tour.time}}</p>
                     </div>
                 </div>
-            </form>
+                <div class="w-100 mt-3">
+
+                    {% if i.tour.img.url != '' %}
+                    <div class="w-100 mt-3">
+                        <img class="w-100" src="{{i.tour.img}}" alt="">
+                    </div>
+                    {% endif %}
+                </div>
+                <p class="fw-bold mt-5">{{i.tour.title}}</p>
+                <p>{{i.tour.desc}}</p>
+                <div class="mt-3">
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">Tournament Conductors: </p>
+                        <p>{{i.tour.user.club_name}}</p>
+                    </div>
+
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">Date: </p>
+                        <p>{{i.tour.tour_date}}</p>
+                    </div>
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">Venue: </p>
+                        <p>{{i.tour.place}}</p>
+                    </div>
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">District: </p>
+                        <p>{{i.tour.district}}</p>
+                    </div>
+                    <p class="text-success"><i class="bi bi-check2-all"></i> You registered for this tournament
+                        on {{i.date_of_join}}</p>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p class="text-danger">You don't have a registered tournament</p>
+            {% endif %}
+            
+
         </div>
+        
+
     </div>
 </body>
 
 </html>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<form action="post">
+    {% csrf_token %}
+</form>
 
 <script>
     $(document).ready(function () {
-        var today = new Date().toISOString().slice(0, 16);
+        function getCSRFToken() {
+            return $('input[name="csrfmiddlewaretoken"]').val();
+        }
 
-document.getElementsByName("tourdate")[0].min = today;
         $("#search_bar").keyup(function () {
 
             var headers = {
@@ -332,11 +381,25 @@ document.getElementsByName("tourdate")[0].min = today;
                 }
             })
         })
-    })
+    });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
-    // Get the current date in the format "YYYY-MM-DD"
-    const currentDate = new Date().toISOString().split('T')[0];
-    // Set the minimum attribute of the date input to the current date
-    document.getElementById('tourdate').setAttribute('min', currentDate);
+    function showConfirmation(tour_id) {
+        console.log(tour_id);
+        
+        Swal.fire({
+            title: 'Are you sure?',
+            text: 'Do you want to enroll in this tournament?',
+            icon: 'question',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0',tour_id);
+            }
+        });
+    }
 </script>
