--- a/us/template/Tournaments.html
+++ b/us/template/Tournaments.html
@@ -286,6 +286,10 @@
                         <p class="fw-bold">District: </p>
                         <p>{{i.district}}</p>
                     </div>
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">Contact Number: </p>
+                        <p>+91 {{i.contact}}</p>
+                    </div>
                     
                     <button onclick="showConfirmation('{{i.id}}')" class="btn btn-primary">Enroll</button>
                     
