--- a/us/template/enrolled.html
+++ b/us/template/enrolled.html
@@ -284,6 +284,10 @@
                         <p class="fw-bold">District: </p>
                         <p>{{i.tour.district}}</p>
                     </div>
+                    <div class="d-flex gap-1">
+                        <p class="fw-bold">Contact Number: </p>
+                        <p>+91 {{i.tour.contact}}</p>
+                    </div>
                     <p class="text-success"><i class="bi bi-check2-all"></i> You registered for this tournament
                         on {{i.date_of_join}}</p>
                 </div>
