tour slots completed

--- a/us/template/Tour.html
+++ b/us/template/Tour.html
@@ -236,7 +236,7 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <input type="number" name="contact" class="form-control" placeholder="Contact Number" required>
+                            <input type="number" name="contact" min="0" class="form-control" placeholder="Contact Number" required>
                             <label for="contact" id="contactErrorLabel" class="text-danger"></label>
                             <input type="text" name="place" class="form-control" placeholder="Venue" required>
 
@@ -245,7 +245,7 @@
                                 placeholder="Title"></textarea>
                             <textarea class="form-control" required name="desc" id="" cols="30" rows="5"
                                 placeholder="Description"></textarea>
-
+                            <input type="number" max="32" min="2" name="slots" class="form-control" placeholder="Number of teams" required>
                         </div>
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn btn-success" disabled>Submit</button>
@@ -350,11 +350,13 @@ document.getElementsByName("tourdate")[0].min = today;
         var descInput = $('textarea[name="desc"]');
         var submitButton = $('button[type="submit"]');
         var contactInput = $('input[name="contact"]');
+        var slots = $('input[name="slots"]');
         var contactErrorLabel = $('#contactErrorLabel');
         contactInput.on('keyup', validateForm);
         tourdateInput.on('keyup', validateForm);
         titleInput.on('keyup', validateForm);
         descInput.on('keyup', validateForm);
+        slots.on('keyup', validateForm);
 
         // Function to perform validation
         function validateForm() {
@@ -363,6 +365,7 @@ document.getElementsByName("tourdate")[0].min = today;
             var titleValue = titleInput.val().trim();
             var descValue = descInput.val().trim();
             var contactValue = contactInput.val().trim();
+            var slotsValue = slots.val().trim();
 
             // Perform your validation logic here
              // Placeholder for your validation logic
@@ -373,7 +376,7 @@ document.getElementsByName("tourdate")[0].min = today;
             } else {
                 contactErrorLabel.text(''); // Clear error message
             }
-            if (titleValue === '' || descValue === '' || !isPhoneValid) {
+            if (titleValue === '' || descValue === '' || !isPhoneValid || slotsValue === '') {
                 isValid = false;
             }
             else{
